--- a/Panda/app/src/main/res/values/strings.xml
+++ b/Panda/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Panda</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="appwidget_text">Panda</string>
     <string name="add_widget">Add widget</string>
 </resources>
